@@ -37,6 +37,9 @@ vtund \- VTun(Virtual Tunnel) daemon.
 .I -p 
 ]
 [ 
+.I -q 
+]
+[ 
 .I -m 
 ]
 [ 
@@ -100,6 +103,9 @@ the 'port' option of config file.
 Reconnect to the server after connection termination. By default vtund will
 exit if connection has been terminated. This options is equivalent to 
 the 'persist' option of config file.
+.TP
+.I -q
+Inhibit the printing of connection messages.
 .TP
 .I -m
 Force memory pages to be locked memory-resident to prevent potential VM deadlock.  Useful with NFS traffic.  This option has no config file equivalent.
